tests/errors/tensor_acos_domain.ki
var T = import("tensor")
discard T.Tensor([2.0]).acos()
